--- a/Advent2021/Advent2021.fsproj
+++ b/Advent2021/Advent2021.fsproj
@@ -19,6 +19,8 @@
     <Compile Include="Puzzel6b.fs" />
     <Compile Include="Puzzel7a.fs" />
     <Compile Include="Puzzel7b.fs" />
+    <Compile Include="Puzzel8a.fs" />
+    <Compile Include="Puzzel8b.fs" />
 
     <Compile Include="Program.fs" />
   </ItemGroup>
