--- a/Advent2021/Advent2021.fsproj
+++ b/Advent2021/Advent2021.fsproj
@@ -23,6 +23,8 @@
     <Compile Include="Puzzel8b.fs" />
     <Compile Include="Puzzel9a.fs" />
     <Compile Include="Puzzel9b.fs" />
+    <Compile Include="Puzzel10a.fs" />
+    <Compile Include="Puzzel10b.fs" />
 
     <Compile Include="Program.fs" />
   </ItemGroup>
