dag 15. Priority queue brengt tijd van uren naar 2 seconden

--- a/Advent2021/Advent2021.fsproj
+++ b/Advent2021/Advent2021.fsproj
@@ -33,6 +33,8 @@
     <Compile Include="Puzzel13b.fs" />
     <Compile Include="Puzzel14a.fs" />
     <Compile Include="Puzzel14b.fs" />
+    <Compile Include="Puzzel15a.fs" />
+    <Compile Include="Puzzel15b.fs" />
 
     <Compile Include="Program.fs" />
   </ItemGroup>
