--- a/Advent2021/Advent2021.fsproj
+++ b/Advent2021/Advent2021.fsproj
@@ -40,11 +40,15 @@
     <Compile Include="Puzzel16b.fs" />
     <Compile Include="Puzzel17a.fs" />
     <Compile Include="Puzzel17b.fs" />
+    <Compile Include="Puzzel18a.fs" />
+    <Compile Include="Puzzel18b.fs" />
+    <Compile Include="Puzzel19a.fs" />
 
     <Compile Include="Program.fs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="fparsec" Version="1.1.1" />
     <PackageReference Include="FSharp.Collections.ParallelSeq" Version="1.2.0" />
+    <PackageReference Include="MathNet.Numerics.FSharp" Version="4.15.0" />
   </ItemGroup>
 </Project>
